--- a/kubernetes/cluster_roles/cert-manager/tasks/main.yaml
+++ b/kubernetes/cluster_roles/cert-manager/tasks/main.yaml
@@ -34,3 +34,8 @@
     definition: "{{ lookup('ansible.builtin.template', 'argocd-deployment.yaml') | from_yaml }}"
     kubeconfig: /etc/rancher/k3s/k3s.yaml
 
+- name: Deploy Cert Issuer
+  kubernetes.core.k8s:
+    state: present
+    definition: "{{ lookup('ansible.builtin.template', 'cert-issuer.j2') | from_yaml }}"
+    kubeconfig: /etc/rancher/k3s/k3s.yaml
