--- a/kubernetes/cluster_roles/cert-manager/tasks/reset.yaml
+++ b/kubernetes/cluster_roles/cert-manager/tasks/reset.yaml
@@ -5,3 +5,7 @@
     kind: Application
     name: cert-manager
     namespace: argocd
+
+- name: Delete Cluster Issuer
+  ansible.builtin.command:
+    cmd: kubectl delete clusterissuer letsencrypt-dns
