--- a/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/application/ingress-service.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
     external-dns.alpha.kubernetes.io/hostname: cyphria.com
-    external-dns.alpha.kubernetes.io/target: "{{ tunnel_id }}.cfargotunnel.com"
+    external-dns.alpha.kubernetes.io/target: 37371dbf-2959-43a0-ad54-83f7ce21cb51.cfargotunnel.com
 spec: 
   ingressClassName: nginx
   rules:
