--- a/kubernetes/cluster_roles/network-policies/deployed-applications/frontend.yaml
+++ b/kubernetes/cluster_roles/network-policies/deployed-applications/frontend.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: frontend
 spec:
   order: 80
-  selector: app.kubernetes.io/name == 'frontend'
+  selector: all()
   types:
     - Ingress
     - Egress
@@ -14,7 +14,7 @@ spec:
       protocol: TCP
       source:
         namespaceSelector: projectcalico.org/name == "nginx"
-        selector: app.kubernetes.io/name == "ingress-nginx"
+        selector: all()
       destination:
         ports: [3000]
   egress:
