--- a/kubernetes/cluster_roles/argo-cd/tasks/main.yaml
+++ b/kubernetes/cluster_roles/argo-cd/tasks/main.yaml
@@ -40,7 +40,19 @@
       kubernetes.core.helm_repository:
         name: '{{ argocd_vars.kubernetes.helm.repository.org }}'
         repo_url: '{{ argocd_map.helm.repository.url }}'
-
+    
+    - name: Set Docker Credential Facts
+      vars:
+        env: "{{ lookup('ansible.builtin.template', 'env.yaml' ) | from_yaml }}"
+      ansible.builtin.set_fact:
+        docker_username: "{{ env['docker-username'] }}"
+        docker_password: "{{ env['docker-password'] }}"
+    
+    - name: Create Bitnami OCI Secret
+      ansible.builtin.shell: kubectl apply -f -
+      args:
+        stdin: "{{ lookup('ansible.builtin.template', 'bitnami-oci-login.j2') }}"
+        
     - name: Chart Setup
       block:
         - name: Install Chart
