--- a/kubernetes/cluster_roles/external-dns/tasks/main.yaml
+++ b/kubernetes/cluster_roles/external-dns/tasks/main.yaml
@@ -3,6 +3,7 @@
     cloudflare_env_data: "{{ lookup('ansible.builtin.template', 'env.yaml' ) | from_yaml }}"
   ansible.builtin.set_fact:
     api_token: "{{ cloudflare_env_data['cloudflare-token'] }}"
+    email: "{{ cloudflare_env_data['email'] }}"
 
 
 - name: Create ArgoCD namespace
@@ -14,26 +15,10 @@
         kind: Namespace
         metadata:
           name: external-dns
-
-- name: Create Cloudflare token Secret
-  vars:
-    cloudflare_token_env_data: "{{ lookup('ansible.builtin.template', 'env.yaml' ) | from_yaml }}"
-  kubernetes.core.k8s:
-    state: present
-    definition:
-      apiVersion: v1
-      kind: Secret
-      type: Opaque
-      metadata: 
-        name: cloudflare-api-key
-        namespace: external-dns
-      stringData: 
-        apiKey: "{{ api_token }}"
-        email: "{{ cloudflare_token_env_data['email'] }}"
   
 - name: Deploy to argocd
   kubernetes.core.k8s:
     state: present
-    definition: "{{ lookup('ansible.builtin.template', 'argocd.yaml') | from_yaml }}"
+    definition: "{{ lookup('ansible.builtin.template', 'argocd.j2') | from_yaml }}"
     kubeconfig: /etc/rancher/k3s/k3s.yaml
 
