created tls certificate resources via cert manager to be used for argocd server, repo server, and dex server

--- a/kubernetes/cluster_roles/cert-manager/tasks/main.yaml
+++ b/kubernetes/cluster_roles/cert-manager/tasks/main.yaml
@@ -26,7 +26,7 @@
         name: cloudflare-api-token-secret
         namespace: cert-manager
       stringData: 
-        api-token: api_token
+        api-token: "{{ api_token }}"
 
 - name: Deploy to argocd
   kubernetes.core.k8s:
@@ -40,8 +40,12 @@
     definition: "{{ lookup('ansible.builtin.template', 'cert-issuer.j2') | from_yaml }}"
     kubeconfig: /etc/rancher/k3s/k3s.yaml
 
-- name: Create Certificate
+- name: Create Certificates
   kubernetes.core.k8s:
     state: present
-    definition: "{{ lookup('ansible.builtin.template', 'certificate.yaml') | from_yaml }}"
+    definition: "{{ lookup('ansible.builtin.template', item ) | from_yaml }}"
     kubeconfig: /etc/rancher/k3s/k3s.yaml
+  with_items:
+    #- ./certificates/general.yaml
+    - ./certificates/argocd-repo-server.yaml
+    - ./certificates/argocd-dex-server.yaml
