--- a/kubernetes/cluster_roles/argo-cd/tasks/postinstall.yaml
+++ b/kubernetes/cluster_roles/argo-cd/tasks/postinstall.yaml
@@ -1,9 +1,17 @@
 - name: Post Install configuration
-  when: inventory_hostname in k3s_map.server.hosts
   run_once: true
   block:
     - name: Add User Account
       kubernetes.core.k8s:
-        kubeconfig: "{{ k3s_project.cluster.kubeconfig }}"
+        kubeconfig: /etc/rancher/k3s/k3s.yaml
         definition: "{{ lookup('ansible.builtin.template', 'credentials.j2') | from_yaml }}"
         wait: true
+
+- name: Restart Pods for tls certs to take effect
+  ansible.builtin.command:
+    cmd: kubectl -n argocd rollout restart deployment {{ deployment }}
+  loop:
+    - argo-cd-argocd-repo-server
+    - argo-cd-argocd-dex-server
+  loop_control:
+    loop_var: deployment
