--- a/kubernetes/cluster_roles/cert-manager/certificates/argocd-dex-server.yaml
+++ b/kubernetes/cluster_roles/cert-manager/certificates/argocd-dex-server.yaml
@@ -1,10 +1,10 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: tls
-  namespace: cert-manager
+  name: argocd-dex-tls
+  namespace: argocd
 spec:
-  secretName: cyphria-wildcard-tls
+  secretName: argocd-dex-server-tls
   issuerRef:
     name: letsencrypt-dns
     kind: ClusterIssuer
