adding tls certs to nginx and prometheus via cert-manager

--- a/kubernetes/cluster_roles/cert-manager/tasks/reset.yaml
+++ b/kubernetes/cluster_roles/cert-manager/tasks/reset.yaml
@@ -6,7 +6,7 @@
     name: cert-manager
     namespace: argocd
 
-- name: Delete Old Certificate resourcs
+- name: Delete ArgoCD Certificate resourcs
   ansible.builtin.command:
     cmd: "{{ certificate_resource }}"
   loop:
