--- a/kubernetes/cluster_roles/network-policies/deployed-applications/cert-manager.yaml
+++ b/kubernetes/cluster_roles/network-policies/deployed-applications/cert-manager.yaml
@@ -20,7 +20,7 @@ spec:
     - action: Allow # metrics
       protocol: TCP
       source:
-        namespaceSelector: app.kubernetes.io/instance == "prometheus"
+        namespaceSelector: projectcalico.org/name == "prometheus"
         selector: all()
       destination:
         ports: [9402]
