fixed selector matching logic

--- a/kubernetes/cluster_roles/prometheus/application/calico-targets.yaml
+++ b/kubernetes/cluster_roles/prometheus/application/calico-targets.yaml
@@ -7,8 +7,9 @@ metadata:
     release: calico
 spec:
   selector:
-    matchLabels:
-      k8s-app: calico-kube-controllers, calico-felix-metrics, calico-typha-metrics
+    matchExpressions:
+      - { key: k8s-app, operator: In,
+          values: [calico-kube-controllers, calico-felix-metrics, calico-typha-metrics] }
   namespaceSelector:
     matchNames:
       - calico-system
