testing to see if prometheus can scrape calico metrics svc

--- a/kubernetes/cluster_roles/prometheus/application/calico-targets.yaml
+++ b/kubernetes/cluster_roles/prometheus/application/calico-targets.yaml
@@ -6,7 +6,8 @@ metadata:
   labels:
     release: prometheus
 spec:
-  selector: all()
+  selector:
+    matchLabels: all()
   namespaceSelector:
     matchNames:
       - calico-system
