testing to see if prometheus can scrape calico typha metrics svc

--- a/kubernetes/cluster_roles/prometheus/application/calico-targets.yaml
+++ b/kubernetes/cluster_roles/prometheus/application/calico-targets.yaml
@@ -7,7 +7,8 @@ metadata:
     release: prometheus
 spec:
   selector:
-    matchLabels: all()
+    matchLabels: 
+      k8s-app: calico-typha-metrics
   namespaceSelector:
     matchNames:
       - calico-system
