kustomization file for argocd

--- a/kubernetes/cyphria_applications_roles/frontend/tasks/main.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/tasks/main.yaml
@@ -1,15 +1,7 @@
 - name: Include tunnel facts variables
   ansible.builtin.include_vars:
     file: "{{ playbook_dir }}/cyphria_applications_roles/cloudflare-tunnel/credentials/temp.yaml"
-
-#- name: Render frontend-ingress YAML from Jinja2 template
-#  ansible.builtin.template:
-#    src: "{{ playbook_dir }}/cyphria_applications_roles/frontend/application/ingress-service.j2"
- #   dest: "{{ playbook_dir }}/cyphria_applications_roles/frontend/application/ingress-service.yaml"
- #   mode: '0644'
- # delegate_to: localhost
-#  become: false
-
+    
 - name: Deploy frontend
   kubernetes.core.k8s:
     state: present
@@ -21,3 +13,7 @@
     state: present
     definition: "{{ lookup('ansible.builtin.template', 'ingress-service.j2') | from_yaml }}"
     kubeconfig: /etc/rancher/k3s/k3s.yaml
+  register: result
+  retries: 20
+  delay: 15
+  until: result is not failed
