--- a/kubernetes/cyphria_applications_roles/frontend/overlay/kustomization.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/overlay/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../base/
+  - base/deployment.yaml
+  - base/service.yaml
+  - base/autoscaler.yaml
 
 images:
   - name: ghcr.io/vchen7629/cyphria-frontend
