--- a/.github/workflows/cyphria-frontend.yaml
+++ b/.github/workflows/cyphria-frontend.yaml
@@ -19,6 +19,11 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
             
+            - name: Extract metadata
+              id: meta
+              run: |
+                echo "SHORT_SHA=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
+            
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3 # v3.0.0
 
@@ -36,3 +41,4 @@ jobs:
                 file: ./frontend/Dockerfile
                 push: true
                 tags: ghcr.io/vchen7629/cyphria-frontend:latest
+                #labels: ${{ steps.meta.outputs.SHORT_SHA }}
