--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/autoscaler.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/autoscaler.yaml
@@ -1,15 +1,15 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: frontend-hpa
+  name: loginapi-hpa
   namespace: frontend
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: cyphria-frontend-deployment
+    name: cyphria-loginapi-deployment
   minReplicas: 1
-  maxReplicas: 3
+  maxReplicas: 4
   metrics:
     - type: Resource
       resource:
