--- a/kubernetes/cyphria_applications_roles/frontend/templates/argo-cd-deployment.yaml
+++ b/kubernetes/cyphria_applications_roles/frontend/templates/argo-cd-deployment.yaml
@@ -6,9 +6,9 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
   annotations:
-    argocd-image-updater.argoproj.io/image-list: ghcr.io/vchen7629/cyphria-frontend:latest
-    argocd-image-updater.argoproj.io/auto-update: "true"
+    argocd-image-updater.argoproj.io/image-list: cyphria-frontend=ghcr.io/vchen7629/cyphria-frontend:latest
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
+    argocd-image-updater.argoproj.io/cyphria-frontend.update-strategy: digest
 spec: 
   project: default
   source:
