--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cyphria-frontend-deployment
+  name: cyphria-loginapi
   labels:
-    app.kubernetes.io/name: frontend
+    app.kubernetes.io/name: loginapi
 spec: 
   selector:
     matchLabels:
-      app.kubernetes.io/name: frontend
+      app.kubernetes.io/name: loginapi
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: frontend
+        app.kubernetes.io/name: loginapi
     spec:
       containers:
         - name: cyphria-frontend
-          image: ghcr.io/vchen7629/cyphria-frontend
+          image: ghcr.io/vchen7629/loginapi
           resources:
             limits:
-              cpu: 256m
+              cpu: 250m
               memory: 512Mi
             requests: 
-              cpu: 128m
+              cpu: 125m
               memory: 256Mi
