--- a/kubernetes/cyphria_applications_roles/login-api/templates/argocd-deployment.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/templates/argocd-deployment.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: cyphria-frontend=ghcr.io/vchen7629/loginapi:latest
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
+    argocd-image-updater.argoproj.io/cyphria-frontend.update-strategy: digest
 spec:
   project: default
   source:
