--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cyphria-loginapi
+  name: cyphria-loginapi-deployment
   labels:
     app.kubernetes.io/name: loginapi
 spec: 
