--- a/kubernetes/cluster_roles/cert-manager/tasks/main.yaml
+++ b/kubernetes/cluster_roles/cert-manager/tasks/main.yaml
@@ -39,6 +39,10 @@
     state: present
     definition: "{{ lookup('ansible.builtin.template', 'cert-issuer.j2') | from_yaml }}"
     kubeconfig: /etc/rancher/k3s/k3s.yaml
+  register: result
+  retries: 20
+  delay: 15
+  until: result is not failed
 
 - name: Create ArgoCD Certificates
   kubernetes.core.k8s:
@@ -48,3 +52,5 @@
   with_items:
     - ./certificates/argocd-repo-server.yaml
     - ./certificates/argocd-dex-server.yaml
+    - ./certificates/argocd-server.yaml
+    - ./certificates/postgres.yaml
