forgot to add cert to CA

--- a/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
+++ b/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
@@ -20,4 +20,6 @@ spec:
     enablePodMonitor: true
   
   certificates:
+    serverCASecret: postgres-tls-secret
     serverTLSSecret: postgres-tls-secret
+    
