fixing syntax error

--- a/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
+++ b/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
@@ -11,7 +11,7 @@ spec:
   resources:
     limits:
       cpu: 1024m
-      memory: 1024Mi
+      memory: 1G
     requests:
       cpu: 756m
       memory: 756m
