--- a/kubernetes/cluster_roles/cert-manager/certificates/postgres-tls.yaml
+++ b/kubernetes/cluster_roles/cert-manager/certificates/postgres-tls.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: postgres-db-tls
+  name: postgres--tls
   namespace: postgres
 spec:
   secretName: postgres-tls-secret
