--- a/kubernetes/cluster_roles/cert-manager/tasks/reset.yaml
+++ b/kubernetes/cluster_roles/cert-manager/tasks/reset.yaml
@@ -11,18 +11,23 @@
     cmd: "{{ certificate_resource }}"
   loop:
     - kubectl delete clusterissuer letsencrypt-dns
+    - kubectl delete clusterissuer selfsigned-issuer
+    - kubectl delete clusterissuer ca-issuer
     - kubectl delete certificate argocd-repo-tls -n argocd
     - kubectl delete certificate argocd-dex-tls -n argocd
     - kubectl delete certificate argocd-server-tls -n argocd
-    - kubectl delete certificate postgres-tls -n postgres
+    - kubectl delete certificate postgres-db-tls -n postgres
+    - kubectl delete certificate postgres-db-ca -n postgres
     - kubectl delete secrets argocd-repo-server-tls -n argocd
     - kubectl delete secrets argocd-dex-server-tls -n argocd
     - kubectl delete secrets argocd-server-tls -n argocd
     - kubectl delete secrets postgres-tls-secret -n postgres
+    - kubectl delete secrets postgres-ca-secret -n postgres
     - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=argocd-repo-tls
     - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=argocd-dex-tls
     - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=argocd-server-tls
-    - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=postgres-tls
+    - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=postgres-db-tls
+    - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=postgres-ca-tls
     - kubectl -n cert-manager delete orders -l cert-manager.io/certificate-name=argocd-repo-tls
     - kubectl -n cert-manager delete orders -l cert-manager.io/certificate-name=argocd-dex-tls
     - kubectl -n cert-manager delete orders -l cert-manager.io/certificate-name=argocd-server-tls
