--- a/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
+++ b/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
@@ -20,6 +20,6 @@ spec:
     enablePodMonitor: true
   
   certificates:
-    serverCASecret: postgres-tls-secret
+    serverCASecret: postgres-ca-secret
     serverTLSSecret: postgres-tls-secret
     
