--- a/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
+++ b/kubernetes/cyphria_applications_roles/postgres/application/postgres.yaml
@@ -21,5 +21,5 @@ spec:
   
   certificates:
     serverCASecret: postgres-ca
-    serverTLSSecret: postgres-tls-secret
+    serverTLSSecret: postgres-server-tls
     
