added secrets to login api deployment

--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
@@ -23,3 +23,8 @@ spec:
             requests: 
               cpu: 125m
               memory: 256Mi
+          envFrom:
+            - secretRef:
+                name: postgres-creds
+            - secretRef:
+                name: redis-creds
