--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/autoscaler.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/autoscaler.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: loginapi-hpa
-  namespace: frontend
+  namespace: backend
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
