--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/service.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: loginapi-service
-  namespace: loginapi
+  namespace: backend
 spec: 
   type: ClusterIP
   selector: 
