--- a/kubernetes/cyphria_applications_roles/login-api/tasks/reset.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/tasks/reset.yaml
@@ -8,7 +8,4 @@
 
 - name: Remove Secrets
   ansible.builtin.command:
-    cmd: kubectl delete secrets item -n loginapi
-  with_items: 
-    - postgres-creds
-    - redis-creds
+    cmd: kubectl delete secrets redis-creds -n backend
