pgpass -> password since it was giving me issues

--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: postgres-db-app
-                  key: pgpass
+                  key: password
             - name: PG_DB
               valueFrom:
                 secretKeyRef:
