using standard port 443 instead of 449

--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/service.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/service.yaml
@@ -8,7 +8,7 @@ spec:
   selector: 
     app.kubernetes.io/name: loginapi
   ports:
-    - port: 449
+    - port: 443
       targetPort: 3000
       protocol: TCP
-      name: http
+      name: https
