adding proxy service for login api because the nginx ingress service wasnt discovering loginapi service due to them being in 2 different namespaces

--- a/kubernetes/cyphria_applications_roles/login-api/tasks/reset.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/tasks/reset.yaml
@@ -3,7 +3,7 @@
     state: absent
     api_version: apps/v1
     kind: Deployment
-    name: loginapi
+    name: login-api
     namespace: argocd
 
 - name: Remove Secrets
