--- a/kubernetes/cyphria_applications_roles/login-api/overlay/kustomization.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - base/deployment.yaml
   - base/service.yaml
   - base/autoscaler.yaml
-  - base/proxy.yaml
+  - base/ingress-service.yaml
 
 images:
   - name: ghcr.io/vchen7629/loginapi
