--- a/kubernetes/cyphria_applications_roles/login-api/overlay/base/autoscaler.yaml
+++ b/kubernetes/cyphria_applications_roles/login-api/overlay/base/autoscaler.yaml
@@ -13,7 +13,7 @@ spec:
   metrics:
     - type: Resource
       resource:
-        name: memory
+        name: cpu
         target: 
           type: AverageValue
-          averageValue: 256Mi
+          averageValue: 125m
